# cadex

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: curve.hpp.04885DBACC19587E.idx  ellipse.cpp.EBAAFCCC32DD2A25.idx  ellipse.hpp.258F06BA835A3FA4.idx  main.cpp.07F8DA6BC18BFDF4.idx  types.hpp.7DC44C499C6DF0DA.idx
src/: main.cpp
src/curves/: circle.cpp  circle.hpp  curve.hpp  ellipse.cpp  helix.cpp
src/curves/include/: circle.hpp  curve.hpp  ellipse.hpp  helix.hpp
src/curves/utility/: constants.hpp  types.hpp
src/utility/: types.hpp
